--- a/spec.html
+++ b/spec.html
@@ -1920,6 +1920,46 @@ ArgumentList[Yield, Await] :
 
 </emu-annex>
 
+<emu-annex id=sec-additional-feature-np-argument-lists-runtime-semantics-argumentlistmaxwidth>
+<h1><ins>Static Semantics: ArgumentListMaxWidth</ins></h1>
+<emu-see-also-para op="ArgumentListMaxWidth"></emu-see-also-para>
+
+<emu-note type=editor>
+<p>This section is a wholly new sub-clause of the <a href=https://tc39.github.io/ecma262/#sec-argument-lists>original Argument Lists clause</a>.</p>
+</emu-note>
+
+<emu-grammar>Arguments : `(` `)`</emu-grammar>
+<emu-alg>
+1. Return the numeric value *0*.
+</emu-alg>
+
+<emu-grammar>ArgumentList : ArgumentExpression</emu-grammar>
+<emu-alg>
+1. Return the numeric value *1*.
+</emu-alg>
+
+<emu-grammar>
+ArgumentList :
+  `...` AssignmentExpression
+  RestTopicReference
+  ArgumentList `,` `...` AssignmentExpression
+  ArgumentList `,` RestTopicReference
+</emu-grammar>
+<emu-alg>
+1. Return the numeric value *Infinity*.
+</emu-alg>
+
+<emu-grammar>ArgumentList : ArgumentList `,` ArgumentExpression</emu-grammar>
+<emu-alg>
+1. Let _preceding_ be the ArgumentListMaxWidth of _ArgumentList_.
+2. Return _preceding_ + *1*.
+</emu-alg>
+<emu-note>
+<p>If _preceding_ is *Infinity*, then _preceding_ + 1 is also *Infinity*.</p>
+</emu-note>
+
+</emu-annex>
+
 <emu-annex id=sec-additional-feature-np-argument-lists-runtime-semantics-argumentlistevaluation>
 <h1>Runtime Semantics: ArgumentListEvaluation</h1>
 <emu-see-also-para op="ArgumentListEvaluation"></emu-see-also-para>
