--- a/spec.html
+++ b/spec.html
@@ -2139,9 +2139,9 @@ PipelineTopicStep[In, Yield, Await] :
 
 <emu-grammar>PipelineTopicStep : ConditionalExpression</emu-grammar>
 <emu-alg>
-1. <ins>If this _PipelineTopicStep_ contains `###`, then return *3*.</ins>
-2. <ins>Else if this _PipelineTopicStep_ contains `##`, then return *2*.</ins>
-3. <ins>Else if this _PipelineTopicStep_ contains `#`, then return *1*.</ins><del>Return *1*.</del>
+1. <ins>If this _PipelineTopicStep_ Contains `###`, then return *3*.</ins>
+2. <ins>Else if this _PipelineTopicStep_ Contains `##`, then return *2*.</ins>
+3. <ins>Else if this _PipelineTopicStep_ Contains `#`, then return *1*.</ins><del>Return *1*.</del>
 4. <ins>Else, return *0*.</ins>
 </emu-alg>
 
