--- a/spec.html
+++ b/spec.html
@@ -1096,9 +1096,15 @@ PipelineTopicStep :
 <p>With parameter _inputValues_.</p>
 
 <emu-grammar>PipelineTopicStep : Block</emu-grammar>
-<emu-note type=editor>
-<p>TODO: This annex has not yet been specified.</p>
-</emu-note>
+<emu-alg>
+1. Let _oldEnv_ be the running execution context's Lexical Environment.
+2. Let _pipelineStepEnv_ be New Declarative Environment(_oldEnv_).
+3. Perform TopicEnvironmentInstantiation(_inputValues_, _pipelineStepEnv_).
+4. Set the running execution context's Lexical Environment to _pipelineStepEnv_.
+5. Let _pipelineValue_ be the result of evaluating _Body_.
+6. Set the running execution context's Lexical Environment to _oldEnv_.
+7. Return a List containing the one element which is _pipelineValue_.
+</emu-alg>
 </emu-annex>
 </emu-annex>
 
