--- a/spec.html
+++ b/spec.html
@@ -615,10 +615,9 @@ PipelineBareStep : SimpleReference
 <emu-alg>
 1. Let _inputRef_ be the result of evaluating _ConditionalExpression_.
 2. Let _inputValues_ be a List containing the one element which is the result of ? GetValue(_inputRef_).
-3. Let _pipelineOutputRef_ be ? PipelineEvaluation of _Pipeline_ with argument _inputValues_.
-4. Let _pipelineOutputValues_ be ? GetValue(_pipelineOutputRef_).
-5. Assert: _pipelineOutputValues_ is a List containing one element.
-6. Return _pipelineOutputValues_[0].
+3. Let _pipelineOutputValues_ be ? PipelineEvaluation of _Pipeline_ with argument _inputValues_.
+4. Assert: _pipelineOutputValues_ is a List containing one element.
+5. Return _pipelineOutputValues_[0].
 </emu-alg>
 </emu-clause>
 
@@ -2305,10 +2304,9 @@ PipelineTopicStep :
 <emu-alg>
 1. Let <del>_inputRef_ be the result of evaluating _ConditionalExpression_</del><ins>_inputValues_ be ? ArgumentListEvaluation of _PipelineHead_</ins>.
 2. <del>Let _inputValues_ be a List containing the one element which is the result of ? GetValue(_inputRef_).</del>
-3. Let _pipelineOutputRef_ be ? PipelineEvaluation of _Pipeline_ with argument _inputValues_.
-4. Let _pipelineOutputValues_ be ? GetValue(_pipelineOutputRef_).
-5. Assert: _pipelineOutputValues_ is a List containing one element.
-6. Return _pipelineOutputValues_[0].
+3. Let _pipelineOutputValues_ be ? PipelineEvaluation of _Pipeline_ with argument _inputValues_.
+4. Assert: _pipelineOutputValues_ is a List containing one element.
+5. Return _pipelineOutputValues_[0].
 </emu-alg>
 </emu-annex>
 
