Spec: Remove vestigial TODOs

--- a/spec.html
+++ b/spec.html
@@ -653,7 +653,7 @@ AssignmentExpression[In, Yield, Await] :
 <h1>Iteration Statements</h1>
 
 <emu-note type=editor>
-<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
+<p>This section augments the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS.</p>
 </emu-note>
 
 <emu-clause id=sec-iteration-statements-static-semantics-early-errors>
@@ -1128,7 +1128,7 @@ PipelineTopicStep :
 <p><strong>Not at Stage 0.</strong></p>
 <p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It augments the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>pipeline-function operator</strong> `+&gt;`. This new <strong>unary</strong> operator creates arrow functions with an implicit parameter inputted into a pipeline. The operator brings much power: it enables terse <strong>method extraction</strong>, terse <strong>partial application</strong> of functions/expressions (into unary functions), and terse <strong>composition</strong> of functions/expressions.</p>
 
-<p>TODO: <strong>This annex is unfinished.</strong> Need to update to right associativity. Async pipeline functions are yet to be added. Need to make bare-style pipeline functions variadic.</p>
+<p>[TODO: <strong>This annex is unfinished.</strong> Async pipeline functions are yet to be added.]</p>
 
 <p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-pf>explainer document, § Motivation, Additional Feature PF</a> for information on this feature's motivation.</p>
 
@@ -2518,7 +2518,6 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <emu-annex id=sec-additional-feature-ts>
 <h1>Additional Feature TS: Pipeline `try` Statements</h1>
 <p><strong>Not at Stage 0.</strong></p>
-<p>[TODO]</p>
 
 <emu-annex id=sec-additional-feature-ts-ecmascript-language-statements-and-declarations>
 <h1>ECMAScript Language: Statements and Declarations</h1>
