--- a/spec.html
+++ b/spec.html
@@ -468,7 +468,7 @@ PipelineTopicStep[In, Yield, Await] :
 <emu-grammar>PipeExpression : ConditionalExpression `|&gt;` Pipeline</emu-grammar>
 <emu-grammar>PipelineTopicStep : ConditionalExpression</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if _ConditionalExpression_ is covering |Arguments|.
+1. It is a Syntax Error if _ConditionalExpression_ is covering |Arguments|.
 </emu-alg>
 
 <emu-note type=editor>
@@ -477,9 +477,9 @@ PipelineTopicStep[In, Yield, Await] :
 
 <emu-grammar>PipelineTopicStep : ConditionalExpression</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if _ConditionalExpression_ Contains `#` is *false*.
-* It is a Syntax Error if _ConditionalExpression_ is covering a |YieldExpression|.
-* It is a Syntax Error if _ConditionalExpression_ is covering a |PipelineTopicListHead|.
+1. It is a Syntax Error if _ConditionalExpression_ Contains `#` is *false*.
+2. It is a Syntax Error if _ConditionalExpression_ is covering a |YieldExpression|.
+3. It is a Syntax Error if _ConditionalExpression_ is covering a |PipelineTopicListHead|.
 </emu-alg>
 
 <emu-note type=editor>
@@ -989,7 +989,7 @@ PipelineBareAwaitedFunction[Await] :
 </ins>
 </emu-grammar>
 
-<emu-annex id=sec-additional-feature-bc-pipe-operator-static-semantics-expectedargumentcount>
+<emu-annex id=sec-additional-feature-ba-pipe-operator-static-semantics-expectedargumentcount>
 <h1>Static Semantics: ExpectedArgumentCount</h1>
 <emu-see-also-para op=ExpectedArgumentCount></emu-see-also-para>
 <emu-note type=editor>
@@ -1071,7 +1071,7 @@ PipelineTopicStep[In, Yield, Await] :
 <ins class=block>
 <emu-grammar>PipelineTopicStep : Block</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if _StatementList_ Contains `#` is *false*.
+1. It is a Syntax Error if _StatementList_ Contains `#` is *false*.
 </emu-alg>
 </ins>
 </emu-annex>
@@ -1754,7 +1754,7 @@ RestTopicReference :
 </emu-alg>
 </emu-annex>
 
-<emu-annex id=sec-additional-feature-np-runtime-semantics-resolvetopicexpression aoid=CreateRestTopicIteratorRecord>
+<emu-annex id=sec-additional-feature-np-runtime-semantics-createresttopiciteratorrecord aoid=CreateRestTopicIteratorRecord>
 <h1><ins>Runtime Semantics: CreateRestTopicIteratorRecord</ins></h1>
 <emu-note type=editor>
 <p>This section is a wholly new sub-clause in addition to the augmentations of the core proposal.</p>
@@ -1854,8 +1854,6 @@ SpreadElement[Yield, Await] :
   4. Let _status_ be CreateDataProperty(_array_, ToString(ToUint32(_nextIndex_)), _nextValue_).
   5. Assert: _status_ is *true*.
   6. Let _nextIndex_ be _nextIndex_ + 1.
-</emu-alg>
-<emu-alg>
 </emu-alg>
 <emu-note>
 <p>CreateDataProperty is used to ensure that own properties are defined for the array even if the standard built-in Array prototype object has been modified in a manner that would preclude the creation of new own properties using [[Set]].</p>
@@ -2089,21 +2087,21 @@ PipelineTopicStep[In, Yield, Await] :
 <emu-grammar>PipelineHead : ConditionalExpression</emu-grammar>
 <emu-grammar>PipelineTopicStep : ConditionalExpression</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if _ConditionalExpression_ is covering |Arguments|.
+1. It is a Syntax Error if _ConditionalExpression_ is covering |Arguments|.
 </emu-alg>
 </del>
 
 <ins class=block>
 <emu-grammar>Pipeline : PipelineHead `|&gt;` Pipeline</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if the ArgumentListMaxWidth of _PipelineHead_ is less than the ExpectedArgumentCount of _Pipeline_.
-* It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
-* It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
+1. It is a Syntax Error if the ArgumentListMaxWidth of _PipelineHead_ is less than the ExpectedArgumentCount of _Pipeline_.
+2. It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
+3. It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
 </emu-alg>
 
 <emu-grammar>Pipeline : CoverPipelineBareStepAndTopicStep `|&gt;` Pipeline</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if the ArgumentListMaxWidth of the CoveredPipelineStep of _CoverPipelineBareStepAndTopicStep_ is less than the ExpectedArgumentCount of _Pipeline_.
+1. It is a Syntax Error if the ArgumentListMaxWidth of the CoveredPipelineStep of _CoverPipelineBareStepAndTopicStep_ is less than the ExpectedArgumentCount of _Pipeline_.
 </emu-alg>
 </ins>
 
@@ -2113,11 +2111,11 @@ PipelineTopicStep :
   Block
 </emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>this _PipelineTopicStep_ Contains `#` is *false*.</del><ins>all of the following are true:</ins>
-  * <ins>The ExpectedArgumentCount of this _PipelineTopicStep_ is the numeric value *0*.</ins>
-  * <ins>This _PipelineTopicStep_ Contains `...` is *false*.</ins>
-* It is a Syntax Error if this _PipelineTopicStep_ is covering a |YieldExpression|.
-* It is a Syntax Error if this _PipelineTopicStep_ is covering a |PipelineTopicListHead|.
+1. It is a Syntax Error if <del>this _PipelineTopicStep_ Contains `#` is *false*.</del><ins>all of the following are true:</ins>
+  1. <ins>The ExpectedArgumentCount of this _PipelineTopicStep_ is the numeric value *0*.</ins>
+  2. <ins>This _PipelineTopicStep_ Contains `...` is *false*.</ins>
+2. It is a Syntax Error if this _PipelineTopicStep_ is covering a |YieldExpression|.
+3. It is a Syntax Error if this _PipelineTopicStep_ is covering a |PipelineTopicListHead|.
 </emu-alg>
 <emu-note type=editor>
 <p>The production <emu-grammar>PipelineTopicStep : Block</emu-grammar> above is included only when <emu-xref href=#sec-additional-feature-bp>Additional Feature BP</emu-xref> is also included.</p>
@@ -2343,9 +2341,9 @@ IterationStatement :
   `for` `await` `(` ForDeclaration `of` AssignmentExpression `)` Statement
 </emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_Statement_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
-  * <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
-  * <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
+1. It is a Syntax Error if <del>_Statement_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
+  1. <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
+  2. <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
 </emu-alg>
 
 <emu-note>
@@ -2367,9 +2365,9 @@ IterationStatement :
 
 <emu-grammar>WithStatement : `with` `(` Expression `)` Statement</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_Statement_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
-  * <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
-  * <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
+1. It is a Syntax Error if <del>_Statement_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
+  1. <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
+  2. <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
 </emu-alg>
 
 <emu-note>
@@ -2392,9 +2390,9 @@ IterationStatement :
 <emu-grammar>
 Catch : `catch` `(` CatchParameter `)` Block</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_Block_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
-  * <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
-  * <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
+1. It is a Syntax Error if <del>_Block_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
+  1. <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
+  2. <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
 </emu-alg>
 
 <emu-note>
@@ -2473,9 +2471,9 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <emu-grammar>ScriptBody : StatementList</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_StatementList_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
-  * <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
-  * <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
+1. It is a Syntax Error if <del>_StatementList_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
+  1. <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
+  2. <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
 </emu-alg>
 
 <emu-note>
@@ -2497,9 +2495,9 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <emu-grammar>ModuleItem : StatementListItem</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_StatementListItem_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
-  * <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
-  * <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
+1. It is a Syntax Error if <del>_StatementListItem_ Contains `#` is *true*.</del><ins>any of the following conditions are true:</ins>
+  1. <ins>_Block_ Contains |TopicExpression| is *true*.</ins>
+  2. <ins>_Block_ Contains |RestTopicReference| is *true*.</ins>
 </emu-alg>
 
 <emu-note>
@@ -2571,7 +2569,7 @@ Finally[Yield, Await, Return] :
 <emu-grammar>
 Catch : `catch` `(` CatchParameter `)` Block</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if _Block_ Contains `#` is *true*.
+1. It is a Syntax Error if _Block_ Contains `#` is *true*.
 </emu-alg>
 </del>
 
@@ -2582,9 +2580,9 @@ Catch : `catch` `(` CatchParameter `)` Block</emu-grammar>
 <emu-grammar>
 Catch : `catch` `(` CatchParameter `)` Block</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if <del>_Block_ Contains `#` is *true*.</del>any of the following conditions are true:
-  * _Block_ Contains |TopicExpression| is *true*.
-  * _Block_ Contains |RestTopicReference| is *true*.
+1. It is a Syntax Error if <del>_Block_ Contains `#` is *true*.</del>any of the following conditions are true:
+  1. _Block_ Contains |TopicExpression| is *true*.
+  2. _Block_ Contains |RestTopicReference| is *true*.
 </emu-alg>
 </del>
 
@@ -2607,21 +2605,21 @@ TryStatement :
   `try` `|&gt;` Pipeline `;` Catch Finally
 </emu-grammar>
 <emu-alg>
-* It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
-* It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
+1. It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
+2. It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
 </emu-alg>
 
 <emu-grammar>Catch : `catch` `|&gt;` Pipeline</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if the ArgumentListMaxWidth of _PipelineHead_ is less than the ExpectedArgumentCount of _Pipeline_.
-* It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
-* It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
+1. It is a Syntax Error if the ArgumentListMaxWidth of _PipelineHead_ is less than the ExpectedArgumentCount of _Pipeline_.
+2. It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
+3. It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
 </emu-alg>
 
 <emu-grammar>Finally : `finally` `|&gt;` Pipeline</emu-grammar>
 <emu-alg>
-* It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
-* It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
+1. It is a Syntax Error if the ArgumentListMinWidth of _Pipeline_ is not *1*.
+2. It is a Syntax Error if the ArgumentListMaxWidth of _Pipeline_ is not *1*.
 </emu-alg>
 </ins>
 
